--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
 
     <img src="banner.png" alt="banner" />
 
+   <p>
+    Ook 500 euro verdienen vanuit je flat? klik <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">hier</a>
+   </p> 
+
+   
+   
+
   </body>
 </html>
